--- a/PA4.ipynb
+++ b/PA4.ipynb
@@ -540,7 +540,91 @@
     "        print(\"class:\", predictions[i], end=\"\")\n",
     "        print(\", actual:\", actual)\n",
     "        \n",
-    "print_output_2(knn_test_instances_raw, predictions_2)"
+    "frprint_output_2(knn_test_instances_raw, predictions_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import shuffle\n",
+    "\n",
+    "def compute_accuracy(predictions, actual):\n",
+    "    correct = 0\n",
+    "    for i in range(len(predictions)):\n",
+    "        if predictions[i] == actual[i]:\n",
+    "            correct += 1\n",
+    "    accuracy = correct / len(predictions)\n",
+    "    return accuracy\n",
+    "\n",
+    "def compute_error(predictions, actual):\n",
+    "    incorrect = 0\n",
+    "    for i in range(len(predictions)):\n",
+    "        if predictions[i] != actual[i]:\n",
+    "            incorrect += 1\n",
+    "    error = incorrect / len(predictions)\n",
+    "    return error\n",
+    "\n",
+    "def random_subsample(data, size):\n",
+    "    cutoff = int(len(data) * size)\n",
+    "    data_c = copy.deepcopy(data)\n",
+    "    shuffle(data_c)\n",
+    "    train = data_c[:cutoff]\n",
+    "    test = data_c[cutoff + 1:]\n",
+    "    return test, train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===========================================\n",
+      "STEP 3: Predictive Accuracy\n",
+      "===========================================\n",
+      "Random Subsample (k=10 2:1 Train/Test)\n",
+      "Linear Regression: accuracy = 0.41, error rate = 0.59\n",
+      "k Nearest Neighbor: accuracy = 0.39, error rate = 0.61\n"
+     ]
+    }
+   ],
+   "source": [
+    "def random_subsample_linear(test, train):\n",
+    "    predictions = linear_classifier(train, test)\n",
+    "    actual = [mpg_to_DOE(instance[0]) for instance in test]\n",
+    "    accuracy = compute_accuracy(predictions, actual)\n",
+    "    error_rate = compute_error(predictions, actual)\n",
+    "    return accuracy, error_rate\n",
+    "\n",
+    "def random_subsample_knn(test, train, k):\n",
+    "    data = create_step2_data(train)\n",
+    "    test_instances = create_step2_data(test)\n",
+    "    predictions = knn_classifier(data, test_instances, k, 3)\n",
+    "    actual = [instance[3] for instance in test_instances]\n",
+    "    accuracy = compute_accuracy(predictions, actual)\n",
+    "    error_rate = compute_error(predictions, actual)\n",
+    "    return accuracy, error_rate\n",
+    "    \n",
+    "def print_output_3(data, k, train_size, test_size):\n",
+    "    size = (test_size) / (test_size + train_size)\n",
+    "    test, train = random_subsample(data, size)\n",
+    "    accuracy_l, error_l = random_subsample_linear(test, train)\n",
+    "    accuracy_k, error_k = random_subsample_knn(test, train, k)\n",
+    "    print(\"===========================================\")\n",
+    "    print(\"STEP 3: Predictive Accuracy\")\n",
+    "    print(\"===========================================\")\n",
+    "    print(\"Random Subsample (k=\", k, \" \", train_size, \":\", test_size, \" Train/Test)\", sep=\"\")\n",
+    "    print(\"Linear Regression: accuracy = %.2f, error rate = %.2f\" %(accuracy_l, error_l))\n",
+    "    print(\"k Nearest Neighbor: accuracy = %.2f, error rate = %.2f\" %(accuracy_k, error_k))\n",
+    "    \n",
+    "    \n",
+    "print_output_3(dataset, 10, 2, 1)"
    ]
   },
   {
