--- a/PA4.ipynb
+++ b/PA4.ipynb
@@ -708,6 +708,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression (Stratefied10-Fold Cross Validation Results):\n",
+      "===============================================================\n",
+      "  MPG    1    2    3    4    5    6    7    8    9    10    Total    Recognition (%)\n",
+      "-----  ---  ---  ---  ---  ---  ---  ---  ---  ---  ----  -------  -----------------\n",
+      "    1   22    1    6    2    1    0    0    0    0     0       32            68.75\n",
+      "    2    9    5    3    2    1    0    0    0    0     0       20            25\n",
+      "    3   10    5    8   13    2    0    0    0    0     0       38            21.0526\n",
+      "    4    0    1    8   21   21    3    0    0    0     0       54            38.8889\n",
+      "    5    0    2    3   10   28   19    1    0    0     0       63            44.4444\n",
+      "    6    0    0    0    1    7   25    8    0    0     0       41            60.9756\n",
+      "    7    0    0    0    0    3   12   18    0    0     0       33            54.5455\n",
+      "    8    0    0    0    0    0    2   20    0    0     0       22             0\n",
+      "    9    0    0    0    0    0    1    2    0    0     0        3             0\n",
+      "   10    0    0    0    0    0    0    0    0    0     0        0             0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tabulate import tabulate\n",
+    "\n",
+    "def confusion_matrix_linear(data, n):\n",
+    "    results = []\n",
+    "    for i in range(10):\n",
+    "        row = [i + 1]\n",
+    "        for i in range(10):\n",
+    "            row.append(0)\n",
+    "        results.append(row)\n",
+    "    folds = create_cross_fold(data, n)\n",
+    "    for i in range(n):\n",
+    "        test = folds[i]\n",
+    "        train = []\n",
+    "        for x in range(n):\n",
+    "            if x == i:\n",
+    "                continue\n",
+    "            train += folds[x]\n",
+    "        predictions = linear_classifier(train, test)\n",
+    "        actual = [mpg_to_DOE(instance[0]) for instance in test]\n",
+    "        for i in range(len(actual)):\n",
+    "            results[actual[i]-1][predictions[i]] += 1\n",
+    "    for row in results:\n",
+    "        row.append(sum(row) - row[0])\n",
+    "        try:\n",
+    "            recognition = (row[row[0]] / row[11])*100\n",
+    "        except ZeroDivisionError:\n",
+    "            recognition = 0\n",
+    "        finally:\n",
+    "            row.append(recognition)\n",
+    "    header = [\"MPG\"]\n",
+    "    for i in range(1, 11):\n",
+    "        header.append(str(i))\n",
+    "    header += [\"Total\", \"Recognition (%)\"]\n",
+    "    print(\"Linear Regression (Stratefied\", n, \"-Fold Cross Validation Results):\", sep=\"\")\n",
+    "    print(\"===============================================================\")\n",
+    "    print(tabulate(results, headers=header))\n",
+    "    \n",
+    "confusion_matrix_linear(dataset, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'k' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-91-8054af2fb3c0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtabulate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m \u001b[0mconfusion_matrix_knn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-91-8054af2fb3c0>\u001b[0m in \u001b[0;36mconfusion_matrix_knn\u001b[1;34m(data, n)\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_step2_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mtest_instances\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_step2_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0mpredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mknn_classifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_instances\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m         \u001b[0mactual\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0minstance\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0minstance\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtest_instances\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactual\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'k' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def confusion_matrix_knn(data, n):\n",
+    "    results = []\n",
+    "    for i in range(10):\n",
+    "        row = [i + 1]\n",
+    "        for i in range(10):\n",
+    "            row.append(0)\n",
+    "        results.append(row)\n",
+    "    folds = create_cross_fold(data, n)\n",
+    "    for i in range(n):\n",
+    "        test = folds[i]\n",
+    "        train = []\n",
+    "        for x in range(n):\n",
+    "            if x == i:\n",
+    "                continue\n",
+    "            train += folds[x]\n",
+    "        data = create_step2_data(train)\n",
+    "        test_instances = create_step2_data(test)\n",
+    "        predictions = knn_classifier(data, test_instances, k, 3)\n",
+    "        actual = [instance[3] for instance in test_instances]\n",
+    "        for i in range(len(actual)):\n",
+    "            results[actual[i]-1][predictions[i]] += 1\n",
+    "    for row in results:\n",
+    "        row.append(sum(row) - row[0])\n",
+    "        try:\n",
+    "            recognition = (row[row[0]] / row[11])*100\n",
+    "        except ZeroDivisionError:\n",
+    "            recognition = 0\n",
+    "        finally:\n",
+    "            row.append(recognition)\n",
+    "    header = [\"MPG\"]\n",
+    "    for i in range(1, 11):\n",
+    "        header.append(str(i))\n",
+    "    header += [\"Total\", \"Recognition (%)\"]\n",
+    "    print(\"k-NN (Stratefied\", n, \"-Fold Cross Validation Results):\", sep=\"\")\n",
+    "    print(\"========================================================\")\n",
+    "    print(tabulate(results, headers=header))\n",
+    "    \n",
+    "confusion_matrix_knn(dataset, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
