--- a/PA4.ipynb
+++ b/PA4.ipynb
@@ -775,24 +775,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'k' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-91-8054af2fb3c0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtabulate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mheader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m \u001b[0mconfusion_matrix_knn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-91-8054af2fb3c0>\u001b[0m in \u001b[0;36mconfusion_matrix_knn\u001b[1;34m(data, n)\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_step2_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mtest_instances\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_step2_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0mpredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mknn_classifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_instances\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m         \u001b[0mactual\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0minstance\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0minstance\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtest_instances\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactual\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'k' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k-NN (Stratefied10-Fold Cross Validation Results):\n",
+      "========================================================\n",
+      "  MPG    1    2    3    4    5    6    7    8    9    10    Total    Recognition (%)\n",
+      "-----  ---  ---  ---  ---  ---  ---  ---  ---  ---  ----  -------  -----------------\n",
+      "    1   14    6    6    4    2    0    0    0    0     0       32            43.75\n",
+      "    2    4    1   14    1    0    0    0    0    0     0       20             5\n",
+      "    3   10    6    6   11    5    0    0    0    0     0       38            15.7895\n",
+      "    4    8    2    7   19   16    2    0    0    0     0       54            35.1852\n",
+      "    5    4    0    2   20   20   15    1    1    0     0       63            31.746\n",
+      "    6    0    0    0    2    9   21    7    2    0     0       41            51.2195\n",
+      "    7    0    0    0    1    1   11   11    9    0     0       33            33.3333\n",
+      "    8    0    0    0    0    0    2    8   12    0     0       22            54.5455\n",
+      "    9    0    0    0    0    0    1    1    1    0     0        3             0\n",
+      "   10    0    0    0    0    0    0    0    0    0     0        0             0\n"
      ]
     }
    ],
    "source": [
-    "def confusion_matrix_knn(data, n):\n",
+    "def confusion_matrix_knn(data, n, k):\n",
     "    results = []\n",
     "    for i in range(10):\n",
     "        row = [i + 1]\n",
@@ -829,7 +837,7 @@
     "    print(\"========================================================\")\n",
     "    print(tabulate(results, headers=header))\n",
     "    \n",
-    "confusion_matrix_knn(dataset, 10)"
+    "confusion_matrix_knn(dataset, 10, 5)"
    ]
   },
   {
